# playwright-robot-fwk

./: .gitignore  README.md  pyproject.toml  requirements.txt
practice_expand_testing/: globalConfiguration.resource  test.robot
practice_expand_testing/common-utilities/: variablesUtils.resource  yaml.py
practice_expand_testing/page-objects/elements/: caloriesTracker.resource  caloriesTrackerElements.yml  homePage.resource
practice_expand_testing/page-objects/keywords/: caloriesTracker.py  caloriesTracker.resource  homePage.resource
practice_expand_testing/test-data/: listMeals.yml
practice_expand_testing/tests/: CalorieTracker.robot
